Fixed css overflow issue for responsive and added section classes

--- a/css/main.css
+++ b/css/main.css
@@ -3,13 +3,13 @@
 }
 
 #logo {
-    background: url("../img/logo.png") no-repeat;
-    float: left;
+    background: url(../img/logo.png) no-repeat;
+    /* float: left; */
 }
 
 #rlogo {
     margin-top: 20px;
-    margin-right: 5px;
+    margin-right: 15px;
 }
 
 hr {
@@ -17,16 +17,16 @@ hr {
 }
 
 #homeimg {
-    background-image: url("../img/mouse.jpg");
+    background-image: url(../img/mouse.jpg);
     background-size: cover;
 }
 
-.work_feature {
+.work-feature {
     text-transform: uppercase;
     font-weight: 700;
     font-size: 1.3em;
 }
 
-section > h3 {
+.feature-work {
     margin-top: 20px;
 }
